Add postcss config and install components, update BingoBoard css

--- a/client/components/BingoBoard.scss
+++ b/client/components/BingoBoard.scss
@@ -1,6 +1,6 @@
 .bingo-board {
   display: grid;
-  grid-template-columns: repeat(1fr, 5);
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 5px;
 }
 
