Lots of styling

--- a/client/colors.scss
+++ b/client/colors.scss
@@ -2,3 +2,4 @@ $color-primary-darker: #001b31;
 $color-primary-dark: #193145;
 $color-primary-light: #99a3ac;
 $color-primary-lighter: #ccd1d5;
+$color-primary-lightest: #ffffff;
