Greatly improve styles

--- a/client/colors.scss
+++ b/client/colors.scss
@@ -1,5 +1,7 @@
-$color-primary-darker: #001b31;
-$color-primary-dark: #193145;
-$color-primary-light: #99a3ac;
-$color-primary-lighter: #ccd1d5;
-$color-primary-lightest: #ffffff;
+$color-background: #37507f;
+$color-accent: #2c4065;
+$color-accent-hard: #21304c;
+$color-primary: #ebedf2;
+$color-secondary: #c3cad8;
+$color-box-shadow: rgba(0, 0, 0, 0.2);
+$color-box-shadow-dark: rgba(0, 0, 0, 0.4);
