--- a/client/components/GameOfThronesBingoBoard.scss
+++ b/client/components/GameOfThronesBingoBoard.scss
@@ -1,19 +1,4 @@
-@import '../colors';
-
-.game-of-thrones-bingo-board {
+:local(.root) {
   grid-gap: 10px;
   margin-top: 20px;
-}
-
-.game-of-thrones-bingo-board .bingo-board-item {
-  display: flex;
-  width: 60px;
-  height: 60px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: $color-primary;
-  color: $color-background;
-  border-radius: 3px;
-  box-shadow: 0 0 8px $color-box-shadow;
 }
