--- a/client/components/GameOfThronesBingoBoardItem.scss
+++ b/client/components/GameOfThronesBingoBoardItem.scss
@@ -1,9 +1,12 @@
 @import '../colors';
 
 :local(.root) {
+  cursor: pointer;
   display: flex;
-  width: 60px;
-  height: 60px;
+  box-sizing: border-box;
+  width: 70px;
+  height: 70px;
+  padding: 5px;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -11,12 +14,24 @@
   color: $color-background;
   border-radius: 3px;
   box-shadow: 0 0 8px $color-box-shadow;
+  transition-property: transform, opacity, background-color, color;
+  transition-duration: 0.3s;
+
+  &:hover {
+    transform: scale(1.2);
+  }
 }
 
 :local(.empty) {
   opacity: 0.7;
+  color: transparent;
+
+  &:hover {
+    opacity: 0.8;
+    color: $color-background;
+  }
 }
 
 :local(.free) {
-  
+  cursor: default;
 }
