Add title input to GOTBB, move title and subtitle to main menu only, add focus styling to GOTBB

--- a/client/components/GameOfThronesBingoBoard.scss
+++ b/client/components/GameOfThronesBingoBoard.scss
@@ -1,4 +1,29 @@
+@import '../colors';
+
 :local(.root) {
   grid-gap: 10px;
   margin-top: 20px;
+}
+
+:local(.titleInput) {
+  border-radius: 3px;
+  background-color: $color-primary;
+  color: $color-accent;
+  padding: 0.25em 0.75em;
+  box-shadow: 0 0 16px $color-box-shadow;
+  font-family: inherit;
+  font-size: 1.25em;
+  box-sizing: border-box;
+  width: 100%;
+  border: 2px solid $color-primary;
+  margin: 0;
+
+  &::placeholder {
+    color: $color-secondary;
+  }
+
+  &:focus {
+    border-color: $color-focus;
+    outline: none;
+  }
 }
