--- a/client/colors.scss
+++ b/client/colors.scss
@@ -5,3 +5,4 @@ $color-primary: #ebedf2;
 $color-secondary: #c3cad8;
 $color-box-shadow: rgba(0, 0, 0, 0.2);
 $color-box-shadow-dark: rgba(0, 0, 0, 0.4);
+$color-focus: #ffc166;
