--- a/client/components/GameOfThronesBingoBoardItem.scss
+++ b/client/components/GameOfThronesBingoBoardItem.scss
@@ -13,12 +13,19 @@
   background-color: $color-primary;
   color: $color-background;
   border-radius: 3px;
+  border: 2px solid $color-primary;
   box-shadow: 0 0 8px $color-box-shadow;
   transition-property: transform, opacity, background-color, color;
   transition-duration: 0.3s;
 
-  &:hover {
+  &:hover,
+  &:focus {
     transform: scale(1.2);
+  }
+
+  &:focus {
+    border-color: $color-focus;
+    outline: none;
   }
 }
 
@@ -26,7 +33,8 @@
   opacity: 0.7;
   color: transparent;
 
-  &:hover {
+  &:hover,
+  &:focus {
     opacity: 0.8;
     color: $color-background;
   }
