Start work on bingo item popover

--- a/client/colors.scss
+++ b/client/colors.scss
@@ -3,6 +3,7 @@ $color-accent: #2c4065;
 $color-accent-hard: #21304c;
 $color-primary: #ebedf2;
 $color-secondary: #c3cad8;
+$color-tertiary: #888d97;
 $color-box-shadow: rgba(0, 0, 0, 0.2);
 $color-box-shadow-dark: rgba(0, 0, 0, 0.4);
 $color-focus: #ffc166;
