--- a/client/components/GameOfThronesBingoBoardItemPopover.scss
+++ b/client/components/GameOfThronesBingoBoardItemPopover.scss
@@ -25,12 +25,27 @@
   }
 }
 
-:local(.grid) {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(5, 70px);
+:local(.resultWrapper) {
+  position: relative;
   box-sizing: border-box;
   height: 250px;
   padding: 10px;
   overflow-y: scroll;
+}
+
+:local(.grid) {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(5, 70px);
+}
+
+:local(.noResults) {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
