--- a/client/components/GameOfThronesBingoMainMenu.scss
+++ b/client/components/GameOfThronesBingoMainMenu.scss
@@ -1,34 +1,47 @@
 @import '../colors';
 
 :local(.root) {
-  
+  height: 100vh;
+  background-color: $color-primary;
+  box-shadow: 0 0 16px $color-box-shadow-dark;
 }
 
-:local(.buttonWrapper) {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+:local(.button) {
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  padding: 15px;
+  font-weight: 200;
+  font-size: 0.9em;
+  text-align: left;
+  background-color: $color-primary;
+  color: $color-accent-hard;
+  border: none;
 
-  button {
-    margin-top: 20px;
-    font-size: 24px;
+  &:hover {
+    background-color: transparentize($color-secondary, 0.8);
   }
 }
 
 :local(.title),
 :local(.subtitle) {
-  margin-top: 0;
+  margin: 0;
+  padding: 10px;
   font-family: 'Game of Thrones', 'Times New Roman', serif;
   font-weight: normal;
   text-align: center;
   word-spacing: 10px;
+  background-color: $color-secondary;
 }
 
 :local(.title) {
-  font-size: 2em;
+  padding-top: 20px;
+  color: $color-accent-hard;
+  font-size: 1em;
 }
 
 :local(.subtitle) {
-  color: $color-secondary;
-  font-size: 1em;
+  padding-top: 0;
+  color: $color-accent;
+  font-size: 0.75em;
 }
