--- a/client/components/GameOfThronesBingoBoardItem.scss
+++ b/client/components/GameOfThronesBingoBoardItem.scss
@@ -6,33 +6,44 @@
   box-sizing: border-box;
   width: 70px;
   height: 70px;
-  padding: 5px;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: $color-primary;
   color: $color-background;
-  border-radius: 3px;
-  border: 2px solid $color-primary;
+  border-radius: 5px;
+  border: 0px solid $color-primary;
   box-shadow: 0 0 8px $color-box-shadow;
-  transition-property: transform, opacity, background-color, color;
+  transition-property: transform, opacity, color, background-color, border-color;
   transition-duration: 0.3s;
   user-select: none;
 
   &:hover,
   &:focus {
-    transform: scale(1.2);
+    transform: scale(1.1);
   }
 
   &:focus {
     border-color: $color-focus;
     outline: none;
   }
+
+  &:local(.selected) {
+    &, &:focus, &:hover {
+      z-index: 2;
+      opacity: 1;
+      background-color: $color-primary;
+      border-color: $color-secondary;
+      transform: scale(1.2);
+    }
+  }
 }
 
 :local(.empty) {
+  padding: 5px;
   opacity: 0.7;
   color: transparent;
+  background-color: $color-primary;
+  border-width: 2px;
 
   &:hover,
   &:focus {
@@ -43,4 +54,6 @@
 
 :local(.free) {
   cursor: default;
+  padding: 5px;
+  background-color: $color-primary;
 }
